// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb /> Render must match inactive() 1`] = `
<nav
  aria-label="Breadcrumb"
  className="breadcrumb-inactive"
>
  <ol>
    <li
      className="breadcrumb-item"
      href="/fantastic-folder"
      onClick={[Function]}
    >
      <a
        href="/fantastic-folder"
      >
        Fantastic Folder
      </a>
    </li>
    <li
      className="breadcrumb-item"
      href="/fantastic-folder/another-fantastic-folder"
      onClick={[Function]}
    >
      <a
        href="/fantastic-folder/another-fantastic-folder"
      >
        Another Fantastic folder
      </a>
    </li>
    <li
      aria-current="page"
      className="breadcrumb-item breadcrumb-item-selected text-gray"
      href=""
      onClick={[Function]}
    >
      One More Fantastic Folder
    </li>
  </ol>
</nav>
`;

exports[`<Breadcrumb /> Render must match regular() 1`] = `
<nav
  aria-label="Breadcrumb"
  className=""
>
  <ol>
    <li
      className="breadcrumb-item"
      href="/fantastic-folder"
      onClick={[Function]}
    >
      <a
        href="/fantastic-folder"
      >
        Fantastic Folder
      </a>
    </li>
    <li
      className="breadcrumb-item"
      href="/fantastic-folder/another-fantastic-folder"
      onClick={[Function]}
    >
      <a
        href="/fantastic-folder/another-fantastic-folder"
      >
        Another Fantastic folder
      </a>
    </li>
    <li
      aria-current="page"
      className="breadcrumb-item breadcrumb-item-selected text-gray"
      href=""
      onClick={[Function]}
    >
      One More Fantastic Folder
    </li>
  </ol>
</nav>
`;
